# ERCP-acess

./: .gitignore  ERCP.usdc  baby_scope_standalone_stage2.usd  pyproject.toml  simple.usdc  simple_usd.md
configs/: config.yaml
configs/env/: isaac_access.yaml  toy.yaml
configs/obs/: rgb.yaml  rgb_state.yaml  state.yaml
configs/perception/: yolo.yaml
configs/policy/: ours_v2.yaml  pid.yaml  ppo_state.yaml  scripted.yaml
configs/runtime/: cluster.yaml  local.yaml
configs/train/: eval.yaml  ppo.yaml
configs/yolo/: papilla_dataset.yaml  train.yaml
docs/: ERCP_DATASET_SCHEMA.md  TASK_INTERFACE.md  dataset_card.md
scripts/: inspect_data.py  inspect_usd.py  run_b1_pid.py  run_scripted.py  viz_b0_and_mosaic.py
scripts/data/: export_lerobot_ercp.py  prepare_static_images.py  sample_frames_for_annotation.py  split_dataset.py  verify_dataset.py
scripts/eval/: debug_gui_scene.py  run_isaac_scripted.py  visualize_baselines.py
scripts/perception/: day1_fastsam_quick_check.py  eval_yolo.py  run_perception_loop.py  train_yolo.py  validate_state_builder.py
scripts/train/: train_b2_ppo.py
src/controllers/: pid_controller.py  postprocessor.py
src/envs/: base_env.py  gymnasium_wrapper.py  isaac_access_env.py  isaac_lab_cfg.py  toy_access_env.py
src/eval/: evaluator.py
src/gating/: insertion_gate.py  phase_manager.py
src/logging/: logger.py
src/perception/: access_state.py  oracle_state.py  (+2 more)
tests/: test_base_env.py  test_isaac_access_env_pure.py  test_isaac_integration.py  test_logger.py  test_metrics.py  test_pid_policy.py  test_postprocessor.py
(+4 files in other folders)
